--- a/notebooks/12_investigating_the_knn.ipynb
+++ b/notebooks/12_investigating_the_knn.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,7 @@
        "        [0.064721, 0.226644, 0.304482, 0.274662, 0.34698 ]])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -650,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1163,7 +1163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1677,11 +1677,6 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## 12.3. Testing the KNN"
    ]
@@ -1976,6 +1971,300 @@
     "## 12.4. Testing the `RandomForestClassifier`\n",
     "\n",
     "To have a comparison, let's test the `RandomForestClassifier` with the same data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 12.4.1. Testing the `RandomForestClassifier` with the original data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "accuracy\n",
+      "0.5201238390092879\n",
+      "hamming loss\n",
+      "0.040736516213133456\n",
+      "f1 score\n",
+      "0.2036019932902084\n"
+     ]
+    }
+   ],
+   "source": [
+    "br_rfc_model = BinaryRelevance(\n",
+    "    classifier=RandomForestClassifier(random_state=123),\n",
+    "    require_dense=[False, True]\n",
+    ")\n",
+    "br_rfc_model.fit(X_train, y_train)\n",
+    "predictions = br_rfc_model.predict(X_test)\n",
+    "\n",
+    "print(\"accuracy\")\n",
+    "print(metrics.accuracy_score(y_test, predictions))\n",
+    "\n",
+    "print(\"hamming loss\")\n",
+    "print(metrics.hamming_loss(y_test, predictions))\n",
+    "\n",
+    "print(\"f1 score\")\n",
+    "print(metrics.f1_score(y_test, predictions, average=\"macro\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "FIT: X shape is (322, 260)\n",
+      "FIT: X_extended shape is (322, 279)\n",
+      "accuracy\n",
+      "0.5170278637770898\n",
+      "hamming loss\n",
+      "0.040899462277985986\n",
+      "f1 score\n",
+      "0.19562751163151618\n"
+     ]
+    }
+   ],
+   "source": [
+    "sg_rfc_model = StackedGeneralization(\n",
+    "    base_classifier=RandomForestClassifier(random_state=123),\n",
+    ")\n",
+    "sg_rfc_model.fit(X_train, y_train)\n",
+    "predictions = sg_rfc_model.predict(X_test)\n",
+    "\n",
+    "print(\"accuracy\")\n",
+    "print(metrics.accuracy_score(y_test, predictions))\n",
+    "\n",
+    "print(\"hamming loss\")\n",
+    "print(metrics.hamming_loss(y_test, predictions))\n",
+    "\n",
+    "print(\"f1 score\")\n",
+    "print(metrics.f1_score(y_test, predictions, average=\"macro\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "FIT: X shape is (322, 260)\n",
+      "FIT: X_extended shape, for label 0, is (322, 278)\n",
+      "FIT: X_extended shape, for label 1, is (322, 278)\n",
+      "FIT: X_extended shape, for label 2, is (322, 278)\n",
+      "FIT: X_extended shape, for label 3, is (322, 278)\n",
+      "FIT: X_extended shape, for label 4, is (322, 278)\n",
+      "FIT: X_extended shape, for label 5, is (322, 278)\n",
+      "FIT: X_extended shape, for label 6, is (322, 278)\n",
+      "FIT: X_extended shape, for label 7, is (322, 278)\n",
+      "FIT: X_extended shape, for label 8, is (322, 278)\n",
+      "FIT: X_extended shape, for label 9, is (322, 278)\n",
+      "FIT: X_extended shape, for label 10, is (322, 278)\n",
+      "FIT: X_extended shape, for label 11, is (322, 278)\n",
+      "FIT: X_extended shape, for label 12, is (322, 278)\n",
+      "FIT: X_extended shape, for label 13, is (322, 278)\n",
+      "FIT: X_extended shape, for label 14, is (322, 278)\n",
+      "FIT: X_extended shape, for label 15, is (322, 278)\n",
+      "FIT: X_extended shape, for label 16, is (322, 278)\n",
+      "FIT: X_extended shape, for label 17, is (322, 278)\n",
+      "FIT: X_extended shape, for label 18, is (322, 278)\n",
+      "accuracy\n",
+      "0.5108359133126935\n",
+      "hamming loss\n",
+      "0.04171419260224866\n",
+      "f1 score\n",
+      "0.18781808402846423\n"
+     ]
+    }
+   ],
+   "source": [
+    "dbr_rfc_model = DependantBinaryRelevance(\n",
+    "    base_classifier=RandomForestClassifier(random_state=123),\n",
+    ")\n",
+    "dbr_rfc_model.fit(X_train, y_train)\n",
+    "predictions = dbr_rfc_model.predict(X_test)\n",
+    "\n",
+    "print(\"accuracy\")\n",
+    "print(metrics.accuracy_score(y_test, predictions))\n",
+    "\n",
+    "print(\"hamming loss\")\n",
+    "print(metrics.hamming_loss(y_test, predictions))\n",
+    "\n",
+    "print(\"f1 score\")\n",
+    "print(metrics.f1_score(y_test, predictions, average=\"macro\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 12.4.2. Testing the `RandomForestClassifier` with normalization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "accuracy\n",
+      "0.5077399380804953\n",
+      "hamming loss\n",
+      "0.04057357014828092\n",
+      "f1 score\n",
+      "0.2209189098125778\n"
+     ]
+    }
+   ],
+   "source": [
+    "br_rfc_model = BinaryRelevance(\n",
+    "    classifier=RandomForestClassifier(random_state=123),\n",
+    "    require_dense=[False, True]\n",
+    ")\n",
+    "br_rfc_model.fit(sparse.csr_matrix(X_norm_train), sparse.csr_matrix(y_train))\n",
+    "predictions = br_rfc_model.predict(sparse.csr_matrix(X_norm_test))\n",
+    "\n",
+    "print(\"accuracy\")\n",
+    "print(metrics.accuracy_score(y_test, predictions))\n",
+    "\n",
+    "print(\"hamming loss\")\n",
+    "print(metrics.hamming_loss(y_test, predictions))\n",
+    "\n",
+    "print(\"f1 score\")\n",
+    "print(metrics.f1_score(y_test, predictions, average=\"macro\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "FIT: X shape is (322, 260)\n",
+      "FIT: X_extended shape is (322, 279)\n",
+      "accuracy\n",
+      "0.5077399380804953\n",
+      "hamming loss\n",
+      "0.040736516213133456\n",
+      "f1 score\n",
+      "0.2203619618872088\n"
+     ]
+    }
+   ],
+   "source": [
+    "sg_rfc_model = StackedGeneralization(\n",
+    "    base_classifier=RandomForestClassifier(random_state=123),\n",
+    ")\n",
+    "sg_rfc_model.fit(sparse.csr_matrix(X_norm_train), sparse.csr_matrix(y_train))\n",
+    "predictions = sg_rfc_model.predict(sparse.csr_matrix(X_norm_test))\n",
+    "\n",
+    "print(\"accuracy\")\n",
+    "print(metrics.accuracy_score(y_test, predictions))\n",
+    "\n",
+    "print(\"hamming loss\")\n",
+    "print(metrics.hamming_loss(y_test, predictions))\n",
+    "\n",
+    "print(\"f1 score\")\n",
+    "print(metrics.f1_score(y_test, predictions, average=\"macro\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "FIT: X shape is (322, 260)\n",
+      "FIT: X_extended shape, for label 0, is (322, 278)\n",
+      "FIT: X_extended shape, for label 1, is (322, 278)\n",
+      "FIT: X_extended shape, for label 2, is (322, 278)\n",
+      "FIT: X_extended shape, for label 3, is (322, 278)\n",
+      "FIT: X_extended shape, for label 4, is (322, 278)\n",
+      "FIT: X_extended shape, for label 5, is (322, 278)\n",
+      "FIT: X_extended shape, for label 6, is (322, 278)\n",
+      "FIT: X_extended shape, for label 7, is (322, 278)\n",
+      "FIT: X_extended shape, for label 8, is (322, 278)\n",
+      "FIT: X_extended shape, for label 9, is (322, 278)\n",
+      "FIT: X_extended shape, for label 10, is (322, 278)\n",
+      "FIT: X_extended shape, for label 11, is (322, 278)\n",
+      "FIT: X_extended shape, for label 12, is (322, 278)\n",
+      "FIT: X_extended shape, for label 13, is (322, 278)\n",
+      "FIT: X_extended shape, for label 14, is (322, 278)\n",
+      "FIT: X_extended shape, for label 15, is (322, 278)\n",
+      "FIT: X_extended shape, for label 16, is (322, 278)\n",
+      "FIT: X_extended shape, for label 17, is (322, 278)\n",
+      "FIT: X_extended shape, for label 18, is (322, 278)\n",
+      "accuracy\n",
+      "0.5170278637770898\n",
+      "hamming loss\n",
+      "0.04122535440769105\n",
+      "f1 score\n",
+      "0.19405097522531972\n"
+     ]
+    }
+   ],
+   "source": [
+    "dbr_rfc_model = DependantBinaryRelevance(\n",
+    "    base_classifier=RandomForestClassifier(random_state=123),\n",
+    ")\n",
+    "dbr_rfc_model.fit(sparse.csr_matrix(X_norm_train), sparse.csr_matrix(y_train))\n",
+    "predictions = dbr_rfc_model.predict(sparse.csr_matrix(X_norm_test))\n",
+    "\n",
+    "print(\"accuracy\")\n",
+    "print(metrics.accuracy_score(y_test, predictions))\n",
+    "\n",
+    "print(\"hamming loss\")\n",
+    "print(metrics.hamming_loss(y_test, predictions))\n",
+    "\n",
+    "print(\"f1 score\")\n",
+    "print(metrics.f1_score(y_test, predictions, average=\"macro\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 12.4.3. Results so far\n",
+    "\n",
+    "The `RandomForestClassifier` shows different results by using either the regular or the normalized data. However, some odd behavious may be observed:\n",
+    "* For the regular data, the _more_ the label features are added, **the worse the results get**.\n",
+    "* For the normalized data, the `BinaryRelevance` and the `StackedGeneralization` classifiers show almost the same results. And the performance peaks with the usage of the `DependentBinaryRelevance` classifier, which considers all the label correlations."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 12.5. Conclusion\n",
+    "\n",
+    "While the `RandomForestClassifier` does not require normalization to properly weight the label correlations, the KNN seems to require it for certain datasets. Here, the `birds` dataset is one of them and it is the one used for experimenting.\n",
+    "\n",
+    "Using normalization forces the `KNN` to consider the label features, as it only shows different metrics for different models (one that does not consider label correlations, and two models that consider them) when the data is normalized. Without normalization, the metrics are the same for all models.\n",
+    "\n",
+    "**This shows that it might be worthy it to run a full metrics pipeline using normalized data**."
    ]
   }
  ],
