generates two tables instead of just one

--- a/data/table_accuracy.tex
+++ b/data/table_accuracy.tex
@@ -1,7 +1,7 @@
 
 \begin{table}[htbp]
 	\centering
-	\caption{Resultados obtidos para acurácia}
+	\caption{Resultados obtidos para acurácia (1)}
 		\begin{tabular}
         { p{0.88in} p{0.88in} p{0.88in} p{0.88in} p{0.88in} p{0.88in} }
         
@@ -17,8 +17,22 @@ S-F & 0,3033 \newline ($\sigma$ 0,0377) & 0,5688 \newline ($\sigma$ 0,1335) & 0,
 (B)DBR & 0,2898 \newline ($\sigma$ 0,0399) & 0,5609 \newline ($\sigma$ 0,1308) & 0,2168 \newline ($\sigma$ 0,0237) & 0,4980 \newline ($\sigma$ 0,0693) & 0,2684 \newline ($\sigma$ 0,0479) \\ \\
 (B)BR & 0,2933 \newline ($\sigma$ 0,0424) & 0,5360 \newline ($\sigma$ 0,1395) & 0,2127 \newline ($\sigma$ 0,0174) & 0,5118 \newline ($\sigma$ 0,0567) & 0,2663 \newline ($\sigma$ 0,0486) \\ \\
 
-\hline
- & \textit{genbase} & \textit{medical} & \textit{enron} & Vitórias & Rank \\ 
+        \hline
+        \end{tabular}
+	\label{tab:metricsForaccuracy_1}
+  \source{Edgard Taver, 2023}
+\end{table}
+
+
+
+\begin{table}[htbp]
+	\centering
+	\caption{Resultados obtidos para acurácia (2)}
+		\begin{tabular}
+        { p{0.88in} p{0.88in} p{0.88in} p{0.88in} p{0.88in} p{0.88in} }
+        
+        \hline
+Modelo & \textit{genbase} & \textit{medical} & \textit{enron} & \textbf{Vitórias} & \textbf{Rank} \\ 
 \hline
 
 CC-F & \textbf{0,9425} \newline ($\sigma$ 0,0358) & \textbf{0,5288} \newline ($\sigma$ 0,0667) & 0,0605 \newline ($\sigma$ 0,0467) & 4 & 2,1250 \\ \\
@@ -31,6 +45,6 @@ S-F & \textbf{0,9425} \newline ($\sigma$ 0,0358) & 0,5053 \newline ($\sigma$ 0,0
 
         \hline
         \end{tabular}
-	\label{tab:metricsForaccuracy}
+	\label{tab:metricsForaccuracy_2}
   \source{Edgard Taver, 2023}
 \end{table}
