--- a/data/table_f1.tex
+++ b/data/table_f1.tex
@@ -1,7 +1,7 @@
 
 \begin{table}[htbp]
 	\centering
-	\caption{Resultados obtidos para f1}
+	\caption{Resultados obtidos para f1 (1)}
 		\begin{tabular}
         { p{0.88in} p{0.88in} p{0.88in} p{0.88in} p{0.88in} p{0.88in} }
         
@@ -17,8 +17,22 @@ S-F & 0,6299 \newline ($\sigma$ 0,0352) & 0,2823 \newline ($\sigma$ 0,0411) & 0,
 CC-LOP & 0,6394 \newline ($\sigma$ 0,0335) & 0,2739 \newline ($\sigma$ 0,0432) & 0,4310 \newline ($\sigma$ 0,0162) & 0,2794 \newline ($\sigma$ 0,0655) & 0,4287 \newline ($\sigma$ 0,0660) \\ \\
 (B)BR & 0,6186 \newline ($\sigma$ 0,0359) & 0,2746 \newline ($\sigma$ 0,0449) & 0,4253 \newline ($\sigma$ 0,0183) & \textbf{0,2858} \newline ($\sigma$ 0,0719) & 0,4271 \newline ($\sigma$ 0,0652) \\ \\
 
-\hline
- & \textit{genbase} & \textit{medical} & \textit{enron} & Vitórias & Rank \\ 
+        \hline
+        \end{tabular}
+	\label{tab:metricsForf1_1}
+  \source{Edgard Taver, 2023}
+\end{table}
+
+
+
+\begin{table}[htbp]
+	\centering
+	\caption{Resultados obtidos para f1 (2)}
+		\begin{tabular}
+        { p{0.88in} p{0.88in} p{0.88in} p{0.88in} p{0.88in} p{0.88in} }
+        
+        \hline
+Modelo & \textit{genbase} & \textit{medical} & \textit{enron} & \textbf{Vitórias} & \textbf{Rank} \\ 
 \hline
 
 CC-F & 0,5158 \newline ($\sigma$ 0,1036) & \textbf{0,2000} \newline ($\sigma$ 0,0229) & 0,0666 \newline ($\sigma$ 0,0230) & 2 & 2,8750 \\ \\
@@ -31,6 +45,6 @@ CC-LOP & 0,5158 \newline ($\sigma$ 0,1036) & 0,1810 \newline ($\sigma$ 0,0214) &
 
         \hline
         \end{tabular}
-	\label{tab:metricsForf1}
+	\label{tab:metricsForf1_2}
   \source{Edgard Taver, 2023}
 \end{table}
