further improvements to the table layout

--- a/data/table_accuracy.tex
+++ b/data/table_accuracy.tex
@@ -7,7 +7,7 @@
         
         \hline
 Modelo & \textit{emotions} & \textit{scene} & \textit{yeast} & \textit{birds} & \textit{tmc2007\_500} \\ 
-\hline
+\hline \\
 
 CC-F & 0,3204 \newline ($\sigma$ 0,0430) & \textbf{0,6087} \newline ($\sigma$ 0,1199) & 0,2474 \newline ($\sigma$ 0,0266) & 0,5041 \newline ($\sigma$ 0,0585) & \textbf{0,2785} \newline ($\sigma$ 0,0472) \\ \\
 (B)CC & \textbf{0,3255} \newline ($\sigma$ 0,0342) & 0,5630 \newline ($\sigma$ 0,1465) & \textbf{0,2486} \newline ($\sigma$ 0,0204) & 0,4933 \newline ($\sigma$ 0,0655) & 0,2738 \newline ($\sigma$ 0,0477) \\ \\
@@ -17,9 +17,12 @@ S-F & 0,3033 \newline ($\sigma$ 0,0377) & 0,5688 \newline ($\sigma$ 0,1335) & 0,
 (B)DBR & 0,2898 \newline ($\sigma$ 0,0399) & 0,5609 \newline ($\sigma$ 0,1308) & 0,2168 \newline ($\sigma$ 0,0237) & 0,4980 \newline ($\sigma$ 0,0693) & 0,2684 \newline ($\sigma$ 0,0479) \\ \\
 (B)BR & 0,2933 \newline ($\sigma$ 0,0424) & 0,5360 \newline ($\sigma$ 0,1395) & 0,2127 \newline ($\sigma$ 0,0174) & 0,5118 \newline ($\sigma$ 0,0567) & 0,2663 \newline ($\sigma$ 0,0486) \\ \\
 
-        \hline
+\hline \ 
+ Diferença & 0,0357 & 0,0727 & 0,0359 & 0,0263 & 0,0122 \\ 
+\hline \\
+
         \end{tabular}
-	\label{tab:metricsForaccuracy_1}
+	\label{tab:metricsForAccuracy_1}
   \source{Edgard Taver, 2023}
 \end{table}
 
@@ -33,7 +36,7 @@ S-F & 0,3033 \newline ($\sigma$ 0,0377) & 0,5688 \newline ($\sigma$ 0,1335) & 0,
         
         \hline
 Modelo & \textit{genbase} & \textit{medical} & \textit{enron} & \textbf{Vitórias} & \textbf{Rank} \\ 
-\hline
+\hline \\
 
 CC-F & \textbf{0,9425} \newline ($\sigma$ 0,0358) & \textbf{0,5288} \newline ($\sigma$ 0,0667) & 0,0605 \newline ($\sigma$ 0,0467) & 4 & 2,1250 \\ \\
 (B)CC & \textbf{0,9425} \newline ($\sigma$ 0,0358) & 0,5206 \newline ($\sigma$ 0,0653) & \textbf{0,0710} \newline ($\sigma$ 0,0830) & 4 & 2,5000 \\ \\
@@ -43,8 +46,11 @@ S-F & \textbf{0,9425} \newline ($\sigma$ 0,0358) & 0,5053 \newline ($\sigma$ 0,0
 (B)DBR & 0,9410 \newline ($\sigma$ 0,0362) & 0,5165 \newline ($\sigma$ 0,0620) & 0,0400 \newline ($\sigma$ 0,0256) & 0 & 5,2500 \\ \\
 (B)BR & \textbf{0,9425} \newline ($\sigma$ 0,0358) & 0,4951 \newline ($\sigma$ 0,0728) & 0,0382 \newline ($\sigma$ 0,0202) & 1 & 5,3750 \\ \\
 
-        \hline
+\hline \ 
+ Diferença & 0,0015 & 0,0337 & 0,0328 &  &  \\ 
+\hline \\
+
         \end{tabular}
-	\label{tab:metricsForaccuracy_2}
+	\label{tab:metricsForAccuracy_2}
   \source{Edgard Taver, 2023}
 \end{table}
