--- a/data/table_f1.tex
+++ b/data/table_f1.tex
@@ -7,7 +7,7 @@
         
         \hline
 Modelo & \textit{emotions} & \textit{scene} & \textit{yeast} & \textit{birds} & \textit{tmc2007\_500} \\ 
-\hline
+\hline \\
 
 CC-F & 0,6311 \newline ($\sigma$ 0,0450) & 0,2834 \newline ($\sigma$ 0,0461) & \textbf{0,4354} \newline ($\sigma$ 0,0194) & 0,2777 \newline ($\sigma$ 0,0535) & 0,4340 \newline ($\sigma$ 0,0661) \\ \\
 (B)CC & \textbf{0,6400} \newline ($\sigma$ 0,0383) & 0,2785 \newline ($\sigma$ 0,0420) & 0,4352 \newline ($\sigma$ 0,0119) & 0,2702 \newline ($\sigma$ 0,0615) & 0,4339 \newline ($\sigma$ 0,0655) \\ \\
@@ -17,9 +17,12 @@ S-F & 0,6299 \newline ($\sigma$ 0,0352) & 0,2823 \newline ($\sigma$ 0,0411) & 0,
 CC-LOP & 0,6394 \newline ($\sigma$ 0,0335) & 0,2739 \newline ($\sigma$ 0,0432) & 0,4310 \newline ($\sigma$ 0,0162) & 0,2794 \newline ($\sigma$ 0,0655) & 0,4287 \newline ($\sigma$ 0,0660) \\ \\
 (B)BR & 0,6186 \newline ($\sigma$ 0,0359) & 0,2746 \newline ($\sigma$ 0,0449) & 0,4253 \newline ($\sigma$ 0,0183) & \textbf{0,2858} \newline ($\sigma$ 0,0719) & 0,4271 \newline ($\sigma$ 0,0652) \\ \\
 
-        \hline
+\hline \ 
+ Diferença & 0,0214 & 0,0125 & 0,0155 & 0,0226 & 0,0082 \\ 
+\hline \\
+
         \end{tabular}
-	\label{tab:metricsForf1_1}
+	\label{tab:metricsForF1_1}
   \source{Edgard Taver, 2023}
 \end{table}
 
@@ -33,7 +36,7 @@ CC-LOP & 0,6394 \newline ($\sigma$ 0,0335) & 0,2739 \newline ($\sigma$ 0,0432) &
         
         \hline
 Modelo & \textit{genbase} & \textit{medical} & \textit{enron} & \textbf{Vitórias} & \textbf{Rank} \\ 
-\hline
+\hline \\
 
 CC-F & 0,5158 \newline ($\sigma$ 0,1036) & \textbf{0,2000} \newline ($\sigma$ 0,0229) & 0,0666 \newline ($\sigma$ 0,0230) & 2 & 2,8750 \\ \\
 (B)CC & 0,5169 \newline ($\sigma$ 0,1037) & 0,1934 \newline ($\sigma$ 0,0228) & \textbf{0,0685} \newline ($\sigma$ 0,0201) & 2 & 3,2500 \\ \\
@@ -43,8 +46,11 @@ S-F & \textbf{0,5208} \newline ($\sigma$ 0,1067) & 0,1894 \newline ($\sigma$ 0,0
 CC-LOP & 0,5158 \newline ($\sigma$ 0,1036) & 0,1810 \newline ($\sigma$ 0,0214) & 0,0659 \newline ($\sigma$ 0,0202) & 0 & 4,8750 \\ \\
 (B)BR & \textbf{0,5208} \newline ($\sigma$ 0,1067) & 0,1753 \newline ($\sigma$ 0,0234) & 0,0651 \newline ($\sigma$ 0,0202) & 2 & 5,1250 \\ \\
 
-        \hline
+\hline \ 
+ Diferença & 0,0077 & 0,0247 & 0,0034 &  &  \\ 
+\hline \\
+
         \end{tabular}
-	\label{tab:metricsForf1_2}
+	\label{tab:metricsForF1_2}
   \source{Edgard Taver, 2023}
 \end{table}
