--- a/data/table_hamming_loss.tex
+++ b/data/table_hamming_loss.tex
@@ -9,16 +9,17 @@
 Modelo & \textit{emotions} & \textit{scene} & \textit{yeast} & \textit{birds} & \textit{tmc2007\_500} \\ 
 \hline \\
 
-(B)BR & 0,2136 \newline ($\sigma$ 0,0194) & 0,125 \newline ($\sigma$ 0,0437) & 0,2058 \newline ($\sigma$ 0,0089) & \textbf{0,0459} \newline ($\sigma$ 0,0070) & 0,0648 \newline ($\sigma$ 0,0085) \\ \\
-(B)SG & 0,2159 \newline ($\sigma$ 0,0186) & 0,1234 \newline ($\sigma$ 0,0420) & 0,2099 \newline ($\sigma$ 0,0089) & 0,0461 \newline ($\sigma$ 0,0069) & \textbf{0,0643} \newline ($\sigma$ 0,0087) \\ \\
-S-F & 0,2136 \newline ($\sigma$ 0,0194) & 0,1252 \newline ($\sigma$ 0,0438) & \textbf{0,2057} \newline ($\sigma$ 0,0093) & 0,0461 \newline ($\sigma$ 0,0071) & 0,0649 \newline ($\sigma$ 0,0085) \\ \\
-CC-F & 0,213 \newline ($\sigma$ 0,0142) & \textbf{0,1204} \newline ($\sigma$ 0,0425) & 0,2089 \newline ($\sigma$ 0,0090) & 0,049 \newline ($\sigma$ 0,0066) & 0,0655 \newline ($\sigma$ 0,0083) \\ \\
-(B)CC & \textbf{0,2116} \newline ($\sigma$ 0,0120) & 0,1359 \newline ($\sigma$ 0,0509) & 0,2159 \newline ($\sigma$ 0,0081) & 0,0528 \newline ($\sigma$ 0,0079) & 0,0656 \newline ($\sigma$ 0,0085) \\ \\
+PCC-LOP & \textbf{0,1794} \newline ($\sigma$ 0,0161) & \textbf{0,1161} \newline ($\sigma$ 0,0490) & \textbf{0,1903} \newline ($\sigma$ 0,0073) & \textbf{0,040} \newline ($\sigma$ 0,0055) & \textbf{0,0307} \newline ($\sigma$ 0,0261) \\ \\
+(B)BR & 0,2136 \newline ($\sigma$ 0,0194) & 0,125 \newline ($\sigma$ 0,0437) & 0,2058 \newline ($\sigma$ 0,0089) & 0,0459 \newline ($\sigma$ 0,0070) & 0,0648 \newline ($\sigma$ 0,0085) \\ \\
+(B)SG & 0,2159 \newline ($\sigma$ 0,0186) & 0,1234 \newline ($\sigma$ 0,0420) & 0,2099 \newline ($\sigma$ 0,0089) & 0,0461 \newline ($\sigma$ 0,0069) & 0,0643 \newline ($\sigma$ 0,0087) \\ \\
+S-F & 0,2136 \newline ($\sigma$ 0,0194) & 0,1252 \newline ($\sigma$ 0,0438) & 0,2057 \newline ($\sigma$ 0,0093) & 0,0461 \newline ($\sigma$ 0,0071) & 0,0649 \newline ($\sigma$ 0,0085) \\ \\
+CC-F & 0,213 \newline ($\sigma$ 0,0142) & 0,1204 \newline ($\sigma$ 0,0425) & 0,2089 \newline ($\sigma$ 0,0090) & 0,049 \newline ($\sigma$ 0,0066) & 0,0655 \newline ($\sigma$ 0,0083) \\ \\
+(B)CC & 0,2116 \newline ($\sigma$ 0,0120) & 0,1359 \newline ($\sigma$ 0,0509) & 0,2159 \newline ($\sigma$ 0,0081) & 0,0528 \newline ($\sigma$ 0,0079) & 0,0656 \newline ($\sigma$ 0,0085) \\ \\
 (B)DBR & 0,2171 \newline ($\sigma$ 0,0177) & 0,1303 \newline ($\sigma$ 0,0450) & 0,212 \newline ($\sigma$ 0,0072) & 0,0504 \newline ($\sigma$ 0,0072) & 0,0653 \newline ($\sigma$ 0,0085) \\ \\
 CC-LOP & 0,2128 \newline ($\sigma$ 0,0217) & 0,1417 \newline ($\sigma$ 0,0505) & 0,2096 \newline ($\sigma$ 0,0060) & 0,0504 \newline ($\sigma$ 0,0098) & 0,0656 \newline ($\sigma$ 0,0082) \\ \\
 
 \hline \ 
- Diferença & 0,0055 & 0,0213 & 0,0102 & 0,0069 & 0,0013 \\ 
+ Diferença & 0,0377 & 0,0256 & 0,0256 & 0,0128 & 0,0349 \\ 
 \hline \\
 
         \end{tabular}
@@ -38,16 +39,17 @@ CC-LOP & 0,2128 \newline ($\sigma$ 0,0217) & 0,1417 \newline ($\sigma$ 0,0505) &
 Modelo & \textit{genbase} & \textit{medical} & \textit{enron} & \textbf{Vitórias} & \textbf{Rank} \\ 
 \hline \\
 
-(B)BR & \textbf{0,0027} \newline ($\sigma$ 0,0018) & 0,0162 \newline ($\sigma$ 0,0029) & 0,0641 \newline ($\sigma$ 0,0095) & 2 & 2,5000 \\ \\
-(B)SG & 0,0028 \newline ($\sigma$ 0,0018) & \textbf{0,0156} \newline ($\sigma$ 0,0027) & 0,0641 \newline ($\sigma$ 0,0099) & 2 & 2,8750 \\ \\
-S-F & \textbf{0,0027} \newline ($\sigma$ 0,0018) & 0,0164 \newline ($\sigma$ 0,0031) & 0,064 \newline ($\sigma$ 0,0093) & 2 & 2,8750 \\ \\
-CC-F & 0,0029 \newline ($\sigma$ 0,0019) & 0,0158 \newline ($\sigma$ 0,0029) & 0,0675 \newline ($\sigma$ 0,0098) & 1 & 3,6250 \\ \\
-(B)CC & 0,0029 \newline ($\sigma$ 0,0018) & 0,0161 \newline ($\sigma$ 0,0027) & 0,0644 \newline ($\sigma$ 0,0110) & 1 & 4,8750 \\ \\
-(B)DBR & 0,0035 \newline ($\sigma$ 0,0024) & 0,0163 \newline ($\sigma$ 0,0027) & \textbf{0,0639} \newline ($\sigma$ 0,0091) & 1 & 5,0000 \\ \\
-CC-LOP & 0,0029 \newline ($\sigma$ 0,0019) & 0,017 \newline ($\sigma$ 0,0027) & 0,0659 \newline ($\sigma$ 0,0098) & 0 & 5,1250 \\ \\
+PCC-LOP & \textbf{0,0012} \newline ($\sigma$ 0,0010) & \textbf{0,0124} \newline ($\sigma$ 0,0016) & \textbf{0,0474} \newline ($\sigma$ 0,0089) & 8 & 1,0000 \\ \\
+(B)BR & 0,0027 \newline ($\sigma$ 0,0018) & 0,0162 \newline ($\sigma$ 0,0029) & 0,0641 \newline ($\sigma$ 0,0095) & 0 & 3,5000 \\ \\
+(B)SG & 0,0028 \newline ($\sigma$ 0,0018) & 0,0156 \newline ($\sigma$ 0,0027) & 0,0641 \newline ($\sigma$ 0,0099) & 0 & 3,8750 \\ \\
+S-F & 0,0027 \newline ($\sigma$ 0,0018) & 0,0164 \newline ($\sigma$ 0,0031) & 0,064 \newline ($\sigma$ 0,0093) & 0 & 3,8750 \\ \\
+CC-F & 0,0029 \newline ($\sigma$ 0,0019) & 0,0158 \newline ($\sigma$ 0,0029) & 0,0675 \newline ($\sigma$ 0,0098) & 0 & 4,6250 \\ \\
+(B)CC & 0,0029 \newline ($\sigma$ 0,0018) & 0,0161 \newline ($\sigma$ 0,0027) & 0,0644 \newline ($\sigma$ 0,0110) & 0 & 5,8750 \\ \\
+(B)DBR & 0,0035 \newline ($\sigma$ 0,0024) & 0,0163 \newline ($\sigma$ 0,0027) & 0,0639 \newline ($\sigma$ 0,0091) & 0 & 6,0000 \\ \\
+CC-LOP & 0,0029 \newline ($\sigma$ 0,0019) & 0,017 \newline ($\sigma$ 0,0027) & 0,0659 \newline ($\sigma$ 0,0098) & 0 & 6,1250 \\ \\
 
 \hline \ 
- Diferença & 0,0008 & 0,0014 & 0,0036 &  &  \\ 
+ Diferença & 0,0023 & 0,0046 & 0,0201 &  &  \\ 
 \hline \\
 
         \end{tabular}
