updates other datasets

--- a/data/table_f1.tex
+++ b/data/table_f1.tex
@@ -1,3 +1,4 @@
+
 \begin{table}[htbp]
 	\centering
 	\caption{Resultados obtidos para f1 (1)}
@@ -8,23 +9,25 @@
 Modelo & \textit{emotions} & \textit{scene} & \textit{yeast} & \textit{birds} & \textit{tmc2007\_500} \\ 
 \hline \\
 
-PCC-LOP & \textbf{0,6541} \newline ($\sigma$ 0,0287) & 0,2844 \newline ($\sigma$ 0,0991) & 0,4268 \newline ($\sigma$ 0,0171) & \textbf{0,2861} \newline ($\sigma$ 0,0641) & \textbf{0,7202} \newline ($\sigma$ 0,2509) \\ \\
 CC-F & 0,6311 \newline ($\sigma$ 0,0450) & 0,2834 \newline ($\sigma$ 0,0461) & \textbf{0,4354} \newline ($\sigma$ 0,0194) & 0,2777 \newline ($\sigma$ 0,0535) & 0,4340 \newline ($\sigma$ 0,0661) \\ \\
-(B)CC & 0,6400 \newline ($\sigma$ 0,0383) & 0,2785 \newline ($\sigma$ 0,0420) & 0,4352 \newline ($\sigma$ 0,0119) & 0,2702 \newline ($\sigma$ 0,0615) & 0,4339 \newline ($\sigma$ 0,0655) \\ \\
+(B)CC & \textbf{0,6400} \newline ($\sigma$ 0,0383) & 0,2785 \newline ($\sigma$ 0,0420) & 0,4352 \newline ($\sigma$ 0,0119) & 0,2702 \newline ($\sigma$ 0,0615) & 0,4339 \newline ($\sigma$ 0,0655) \\ \\
 S-F & 0,6299 \newline ($\sigma$ 0,0352) & 0,2823 \newline ($\sigma$ 0,0411) & 0,4261 \newline ($\sigma$ 0,0185) & 0,2817 \newline ($\sigma$ 0,0725) & 0,4315 \newline ($\sigma$ 0,0649) \\ \\
-(B)DBR & 0,6297 \newline ($\sigma$ 0,0259) & \textbf{0,2864} \newline ($\sigma$ 0,0476) & 0,4221 \newline ($\sigma$ 0,0141) & 0,2632 \newline ($\sigma$ 0,0564) & 0,4353 \newline ($\sigma$ 0,0670) \\ \\
+(B)DBR & 0,6297 \newline ($\sigma$ 0,0259) & \textbf{0,2864} \newline ($\sigma$ 0,0476) & 0,4221 \newline ($\sigma$ 0,0141) & 0,2632 \newline ($\sigma$ 0,0564) & \textbf{0,4353} \newline ($\sigma$ 0,0670) \\ \\
 (B)SG & 0,6234 \newline ($\sigma$ 0,0356) & 0,2811 \newline ($\sigma$ 0,0453) & 0,4199 \newline ($\sigma$ 0,0200) & 0,2828 \newline ($\sigma$ 0,0591) & 0,4350 \newline ($\sigma$ 0,0695) \\ \\
+PCC-LOP & \textbf{0,6400} \newline ($\sigma$ 0,0286) & 0,2738 \newline ($\sigma$ 0,0418) & 0,4274 \newline ($\sigma$ 0,0190) & \textbf{0,2861} \newline ($\sigma$ 0,0641) & 0,4271 \newline ($\sigma$ 0,0658) \\ \\
 CC-LOP & 0,6394 \newline ($\sigma$ 0,0335) & 0,2739 \newline ($\sigma$ 0,0432) & 0,4310 \newline ($\sigma$ 0,0162) & 0,2794 \newline ($\sigma$ 0,0655) & 0,4287 \newline ($\sigma$ 0,0660) \\ \\
 (B)BR & 0,6186 \newline ($\sigma$ 0,0359) & 0,2746 \newline ($\sigma$ 0,0449) & 0,4253 \newline ($\sigma$ 0,0183) & 0,2858 \newline ($\sigma$ 0,0719) & 0,4271 \newline ($\sigma$ 0,0652) \\ \\
 
 \hline \ 
- Diferença & 0,0355 & 0,0125 & 0,0155 & 0,0229 & 0,2931 \\ 
+ Diferença & 0,0214 & 0,0126 & 0,0155 & 0,0229 & 0,0082 \\ 
 \hline \\
 
         \end{tabular}
 	\label{tab:metricsForF1_1}
   \source{Edgard Taver, 2023}
 \end{table}
+
+
 
 \begin{table}[htbp]
 	\centering
@@ -36,17 +39,17 @@ CC-LOP & 0,6394 \newline ($\sigma$ 0,0335) & 0,2739 \newline ($\sigma$ 0,0432) &
 Modelo & \textit{genbase} & \textit{medical} & \textit{enron} & \textbf{Vitórias} & \textbf{Rank} \\ 
 \hline \\
 
-PCC-LOP & \textbf{0,5542} \newline ($\sigma$ 0,1196) & \textbf{0,2206} \newline ($\sigma$ 0,0166) & \textbf{0,0952} \newline ($\sigma$ 0,0154) & 6 & 1,5000 \\ \\
-CC-F & 0,5158 \newline ($\sigma$ 0,1036) & 0,2000 \newline ($\sigma$ 0,0229) & 0,0666 \newline ($\sigma$ 0,0230) & 1 & 3,7500 \\ \\
-(B)CC & 0,5169 \newline ($\sigma$ 0,1037) & 0,1934 \newline ($\sigma$ 0,0228) & 0,0685 \newline ($\sigma$ 0,0201) & 0 & 4,1250 \\ \\
-S-F & 0,5208 \newline ($\sigma$ 0,1067) & 0,1894 \newline ($\sigma$ 0,0249) & 0,0664 \newline ($\sigma$ 0,0239) & 0 & 4,5000 \\ \\
-(B)DBR & 0,5131 \newline ($\sigma$ 0,1012) & 0,1968 \newline ($\sigma$ 0,0269) & 0,0676 \newline ($\sigma$ 0,0203) & 1 & 4,7500 \\ \\
-(B)SG & 0,5171 \newline ($\sigma$ 0,1038) & 0,1882 \newline ($\sigma$ 0,0228) & 0,0663 \newline ($\sigma$ 0,0200) & 0 & 5,2500 \\ \\
-CC-LOP & 0,5158 \newline ($\sigma$ 0,1036) & 0,1810 \newline ($\sigma$ 0,0214) & 0,0659 \newline ($\sigma$ 0,0202) & 0 & 5,7500 \\ \\
-(B)BR & 0,5208 \newline ($\sigma$ 0,1067) & 0,1753 \newline ($\sigma$ 0,0234) & 0,0651 \newline ($\sigma$ 0,0202) & 0 & 6,1250 \\ \\
+CC-F & 0,5158 \newline ($\sigma$ 0,1036) & \textbf{0,2000} \newline ($\sigma$ 0,0229) & 0,0666 \newline ($\sigma$ 0,0230) & 2 & 3,2500 \\ \\
+(B)CC & 0,5169 \newline ($\sigma$ 0,1037) & 0,1934 \newline ($\sigma$ 0,0228) & \textbf{0,0685} \newline ($\sigma$ 0,0201) & 2 & 3,5000 \\ \\
+S-F & \textbf{0,5208} \newline ($\sigma$ 0,1067) & 0,1894 \newline ($\sigma$ 0,0249) & 0,0664 \newline ($\sigma$ 0,0239) & 1 & 3,8750 \\ \\
+(B)DBR & 0,5131 \newline ($\sigma$ 0,1012) & 0,1968 \newline ($\sigma$ 0,0269) & 0,0676 \newline ($\sigma$ 0,0203) & 2 & 4,3750 \\ \\
+(B)SG & 0,5171 \newline ($\sigma$ 0,1038) & 0,1882 \newline ($\sigma$ 0,0228) & 0,0663 \newline ($\sigma$ 0,0200) & 0 & 4,7500 \\ \\
+PCC-LOP & 0,5206 \newline ($\sigma$ 0,1065) & 0,1725 \newline ($\sigma$ 0,0259) & 0,0655 \newline ($\sigma$ 0,0203) & 2 & 4,8750 \\ \\
+CC-LOP & 0,5158 \newline ($\sigma$ 0,1036) & 0,1810 \newline ($\sigma$ 0,0214) & 0,0659 \newline ($\sigma$ 0,0202) & 0 & 5,2500 \\ \\
+(B)BR & \textbf{0,5208} \newline ($\sigma$ 0,1067) & 0,1753 \newline ($\sigma$ 0,0234) & 0,0651 \newline ($\sigma$ 0,0202) & 1 & 5,6250 \\ \\
 
 \hline \ 
- Diferença & 0,0411 & 0,0453 & 0,0301 &  &  \\ 
+ Diferença & 0,0077 & 0,0275 & 0,0034 &  &  \\ 
 \hline \\
 
         \end{tabular}
