--- a/data/table_accuracy.tex
+++ b/data/table_accuracy.tex
@@ -1,3 +1,4 @@
+
 \begin{table}[htbp]
 	\centering
 	\caption{Resultados obtidos para acurácia (1)}
@@ -8,23 +9,25 @@
 Modelo & \textit{emotions} & \textit{scene} & \textit{yeast} & \textit{birds} & \textit{tmc2007\_500} \\ 
 \hline \\
 
-PCC-LOP & \textbf{0,3489} \newline ($\sigma$ 0,0458) & 0,5427 \newline ($\sigma$ 0,1391) & 0,2441 \newline ($\sigma$ 0,0277) & \textbf{0,5336} \newline ($\sigma$ 0,0692) & \textbf{0,6460} \newline ($\sigma$ 0,3027) \\ \\
-CC-F & 0,3204 \newline ($\sigma$ 0,0430) & \textbf{0,6087} \newline ($\sigma$ 0,1199) & 0,2474 \newline ($\sigma$ 0,0266) & 0,5041 \newline ($\sigma$ 0,0585) & 0,2785 \newline ($\sigma$ 0,0472) \\ \\
-(B)CC & 0,3255 \newline ($\sigma$ 0,0342) & 0,5630 \newline ($\sigma$ 0,1465) & \textbf{0,2486} \newline ($\sigma$ 0,0204) & 0,4933 \newline ($\sigma$ 0,0655) & 0,2738 \newline ($\sigma$ 0,0477) \\ \\
+CC-F & 0,3204 \newline ($\sigma$ 0,0430) & \textbf{0,6087} \newline ($\sigma$ 0,1199) & 0,2474 \newline ($\sigma$ 0,0266) & 0,5041 \newline ($\sigma$ 0,0585) & \textbf{0,2785} \newline ($\sigma$ 0,0472) \\ \\
+(B)CC & \textbf{0,3255} \newline ($\sigma$ 0,0342) & 0,5630 \newline ($\sigma$ 0,1465) & \textbf{0,2486} \newline ($\sigma$ 0,0204) & 0,4933 \newline ($\sigma$ 0,0655) & 0,2738 \newline ($\sigma$ 0,0477) \\ \\
 CC-LOP & 0,3254 \newline ($\sigma$ 0,0438) & 0,5468 \newline ($\sigma$ 0,1391) & 0,2482 \newline ($\sigma$ 0,0249) & 0,4979 \newline ($\sigma$ 0,0627) & 0,2767 \newline ($\sigma$ 0,0453) \\ \\
 S-F & 0,3033 \newline ($\sigma$ 0,0377) & 0,5688 \newline ($\sigma$ 0,1335) & 0,2230 \newline ($\sigma$ 0,0191) & 0,5118 \newline ($\sigma$ 0,0567) & 0,2704 \newline ($\sigma$ 0,0472) \\ \\
-(B)SG & 0,2916 \newline ($\sigma$ 0,0531) & 0,5584 \newline ($\sigma$ 0,1300) & 0,2271 \newline ($\sigma$ 0,0206) & 0,5196 \newline ($\sigma$ 0,0676) & 0,2750 \newline ($\sigma$ 0,0493) \\ \\
+PCC-LOP & 0,3219 \newline ($\sigma$ 0,0484) & 0,5427 \newline ($\sigma$ 0,1391) & 0,2466 \newline ($\sigma$ 0,0262) & 0,5103 \newline ($\sigma$ 0,0615) & 0,2705 \newline ($\sigma$ 0,0484) \\ \\
+(B)SG & 0,2916 \newline ($\sigma$ 0,0531) & 0,5584 \newline ($\sigma$ 0,1300) & 0,2271 \newline ($\sigma$ 0,0206) & \textbf{0,5196} \newline ($\sigma$ 0,0676) & 0,2750 \newline ($\sigma$ 0,0493) \\ \\
 (B)DBR & 0,2898 \newline ($\sigma$ 0,0399) & 0,5609 \newline ($\sigma$ 0,1308) & 0,2168 \newline ($\sigma$ 0,0237) & 0,4980 \newline ($\sigma$ 0,0693) & 0,2684 \newline ($\sigma$ 0,0479) \\ \\
 (B)BR & 0,2933 \newline ($\sigma$ 0,0424) & 0,5360 \newline ($\sigma$ 0,1395) & 0,2127 \newline ($\sigma$ 0,0174) & 0,5118 \newline ($\sigma$ 0,0567) & 0,2663 \newline ($\sigma$ 0,0486) \\ \\
 
 \hline \ 
- Diferença & 0,0591 & 0,0727 & 0,0359 & 0,0403 & 0,3797 \\ 
+ Diferença & 0,0357 & 0,0727 & 0,0359 & 0,0263 & 0,0122 \\ 
 \hline \\
 
         \end{tabular}
 	\label{tab:metricsForAccuracy_1}
   \source{Edgard Taver, 2023}
 \end{table}
+
+
 
 \begin{table}[htbp]
 	\centering
@@ -36,17 +39,17 @@ S-F & 0,3033 \newline ($\sigma$ 0,0377) & 0,5688 \newline ($\sigma$ 0,1335) & 0,
 Modelo & \textit{genbase} & \textit{medical} & \textit{enron} & \textbf{Vitórias} & \textbf{Rank} \\ 
 \hline \\
 
-PCC-LOP & \textbf{0,9698} \newline ($\sigma$ 0,0214) & \textbf{0,5645} \newline ($\sigma$ 0,0515) & \textbf{0,0985} \newline ($\sigma$ 0,1092) & 6 & 2,1250 \\ \\
-CC-F & 0,9425 \newline ($\sigma$ 0,0358) & 0,5288 \newline ($\sigma$ 0,0667) & 0,0605 \newline ($\sigma$ 0,0467) & 1 & 2,8750 \\ \\
-(B)CC & 0,9425 \newline ($\sigma$ 0,0358) & 0,5206 \newline ($\sigma$ 0,0653) & 0,0710 \newline ($\sigma$ 0,0830) & 1 & 3,2500 \\ \\
-CC-LOP & 0,9425 \newline ($\sigma$ 0,0358) & 0,5154 \newline ($\sigma$ 0,0618) & 0,0652 \newline ($\sigma$ 0,0520) & 0 & 3,8750 \\ \\
-S-F & 0,9425 \newline ($\sigma$ 0,0358) & 0,5053 \newline ($\sigma$ 0,0636) & 0,0400 \newline ($\sigma$ 0,0217) & 0 & 4,6250 \\ \\
-(B)SG & 0,9410 \newline ($\sigma$ 0,0362) & 0,5135 \newline ($\sigma$ 0,0732) & 0,0435 \newline ($\sigma$ 0,0238) & 0 & 5,1250 \\ \\
-(B)DBR & 0,9410 \newline ($\sigma$ 0,0362) & 0,5165 \newline ($\sigma$ 0,0620) & 0,0400 \newline ($\sigma$ 0,0256) & 0 & 6,1250 \\ \\
-(B)BR & 0,9425 \newline ($\sigma$ 0,0358) & 0,4951 \newline ($\sigma$ 0,0728) & 0,0382 \newline ($\sigma$ 0,0202) & 0 & 6,3750 \\ \\
+CC-F & 0,9425 \newline ($\sigma$ 0,0358) & \textbf{0,5288} \newline ($\sigma$ 0,0667) & 0,0605 \newline ($\sigma$ 0,0467) & 3 & 2,5000 \\ \\
+(B)CC & 0,9425 \newline ($\sigma$ 0,0358) & 0,5206 \newline ($\sigma$ 0,0653) & \textbf{0,0710} \newline ($\sigma$ 0,0830) & 3 & 2,7500 \\ \\
+CC-LOP & 0,9425 \newline ($\sigma$ 0,0358) & 0,5154 \newline ($\sigma$ 0,0618) & 0,0652 \newline ($\sigma$ 0,0520) & 0 & 3,3750 \\ \\
+S-F & 0,9425 \newline ($\sigma$ 0,0358) & 0,5053 \newline ($\sigma$ 0,0636) & 0,0400 \newline ($\sigma$ 0,0217) & 0 & 4,3750 \\ \\
+PCC-LOP & \textbf{0,9440} \newline ($\sigma$ 0,0353) & 0,4982 \newline ($\sigma$ 0,0668) & 0,0423 \newline ($\sigma$ 0,0264) & 1 & 4,5000 \\ \\
+(B)SG & 0,9410 \newline ($\sigma$ 0,0362) & 0,5135 \newline ($\sigma$ 0,0732) & 0,0435 \newline ($\sigma$ 0,0238) & 1 & 4,6250 \\ \\
+(B)DBR & 0,9410 \newline ($\sigma$ 0,0362) & 0,5165 \newline ($\sigma$ 0,0620) & 0,0400 \newline ($\sigma$ 0,0256) & 0 & 6,0000 \\ \\
+(B)BR & 0,9425 \newline ($\sigma$ 0,0358) & 0,4951 \newline ($\sigma$ 0,0728) & 0,0382 \newline ($\sigma$ 0,0202) & 0 & 6,2500 \\ \\
 
 \hline \ 
- Diferença & 0,0288 & 0,0694 & 0,0603 &  &  \\ 
+ Diferença & 0,0030 & 0,0337 & 0,0328 &  &  \\ 
 \hline \\
 
         \end{tabular}
