fixes not all models being included

--- a/data/table_accuracy.tex
+++ b/data/table_accuracy.tex
@@ -12,8 +12,9 @@ Modelo & \textit{emotions} & \textit{scene} & \textit{yeast} & \textit{birds} & 
 CC-F & 0,3204 \newline ($\sigma$ 0,0430) & \textbf{0,6087} \newline ($\sigma$ 0,1199) & 0,2474 \newline ($\sigma$ 0,0266) & 0,5041 \newline ($\sigma$ 0,0585) & \textbf{0,2785} \newline ($\sigma$ 0,0472) \\ \\
 (B)CC & \textbf{0,3255} \newline ($\sigma$ 0,0342) & 0,5630 \newline ($\sigma$ 0,1465) & \textbf{0,2486} \newline ($\sigma$ 0,0204) & 0,4933 \newline ($\sigma$ 0,0655) & 0,2738 \newline ($\sigma$ 0,0477) \\ \\
 CC-LOP & 0,3254 \newline ($\sigma$ 0,0438) & 0,5468 \newline ($\sigma$ 0,1391) & 0,2482 \newline ($\sigma$ 0,0249) & 0,4979 \newline ($\sigma$ 0,0627) & 0,2767 \newline ($\sigma$ 0,0453) \\ \\
-S-F & 0,3033 \newline ($\sigma$ 0,0377) & 0,5688 \newline ($\sigma$ 0,1335) & 0,2230 \newline ($\sigma$ 0,0191) & 0,5118 \newline ($\sigma$ 0,0567) & 0,2704 \newline ($\sigma$ 0,0472) \\ \\
+CC-GA & 0,3103 \newline ($\sigma$ 0,0465) & 0,5950 \newline ($\sigma$ 0,1125) & 0,2429 \newline ($\sigma$ 0,0230) & 0,5011 \newline ($\sigma$ 0,0751) & 0,2734 \newline ($\sigma$ 0,0470) \\ \\
 PCC-LOP & 0,3219 \newline ($\sigma$ 0,0484) & 0,5427 \newline ($\sigma$ 0,1391) & 0,2466 \newline ($\sigma$ 0,0262) & 0,5103 \newline ($\sigma$ 0,0615) & 0,2705 \newline ($\sigma$ 0,0484) \\ \\
+S-F & 0,3033 \newline ($\sigma$ 0,0377) & 0,5688 \newline ($\sigma$ 0,1335) & 0,2230 \newline ($\sigma$ 0,0191) & 0,5118 \newline ($\sigma$ 0,0567) & 0,2704 \newline ($\sigma$ 0,0472) \\ \\
 (B)SG & 0,2916 \newline ($\sigma$ 0,0531) & 0,5584 \newline ($\sigma$ 0,1300) & 0,2271 \newline ($\sigma$ 0,0206) & \textbf{0,5196} \newline ($\sigma$ 0,0676) & 0,2750 \newline ($\sigma$ 0,0493) \\ \\
 (B)DBR & 0,2898 \newline ($\sigma$ 0,0399) & 0,5609 \newline ($\sigma$ 0,1308) & 0,2168 \newline ($\sigma$ 0,0237) & 0,4980 \newline ($\sigma$ 0,0693) & 0,2684 \newline ($\sigma$ 0,0479) \\ \\
 (B)BR & 0,2933 \newline ($\sigma$ 0,0424) & 0,5360 \newline ($\sigma$ 0,1395) & 0,2127 \newline ($\sigma$ 0,0174) & 0,5118 \newline ($\sigma$ 0,0567) & 0,2663 \newline ($\sigma$ 0,0486) \\ \\
@@ -38,13 +39,14 @@ Modelo & \textit{genbase} & \textit{medical} & \textit{enron} & \textbf{Vitória
 \hline \\
 
 CC-F & 0,9425 \newline ($\sigma$ 0,0358) & \textbf{0,5288} \newline ($\sigma$ 0,0667) & 0,0605 \newline ($\sigma$ 0,0467) & 3 & 2,5000 \\ \\
-(B)CC & 0,9425 \newline ($\sigma$ 0,0358) & 0,5206 \newline ($\sigma$ 0,0653) & \textbf{0,0710} \newline ($\sigma$ 0,0830) & 3 & 2,7500 \\ \\
-CC-LOP & 0,9425 \newline ($\sigma$ 0,0358) & 0,5154 \newline ($\sigma$ 0,0618) & 0,0652 \newline ($\sigma$ 0,0520) & 0 & 3,3750 \\ \\
-S-F & 0,9425 \newline ($\sigma$ 0,0358) & 0,5053 \newline ($\sigma$ 0,0636) & 0,0400 \newline ($\sigma$ 0,0217) & 0 & 4,3750 \\ \\
-PCC-LOP & \textbf{0,9440} \newline ($\sigma$ 0,0353) & 0,4982 \newline ($\sigma$ 0,0668) & 0,0423 \newline ($\sigma$ 0,0264) & 1 & 4,5000 \\ \\
-(B)SG & 0,9410 \newline ($\sigma$ 0,0362) & 0,5135 \newline ($\sigma$ 0,0732) & 0,0435 \newline ($\sigma$ 0,0238) & 1 & 4,6250 \\ \\
-(B)DBR & 0,9410 \newline ($\sigma$ 0,0362) & 0,5165 \newline ($\sigma$ 0,0620) & 0,0400 \newline ($\sigma$ 0,0256) & 0 & 6,0000 \\ \\
-(B)BR & 0,9425 \newline ($\sigma$ 0,0358) & 0,4951 \newline ($\sigma$ 0,0728) & 0,0382 \newline ($\sigma$ 0,0202) & 0 & 6,2500 \\ \\
+(B)CC & 0,9425 \newline ($\sigma$ 0,0358) & 0,5206 \newline ($\sigma$ 0,0653) & \textbf{0,0710} \newline ($\sigma$ 0,0830) & 3 & 3,1250 \\ \\
+CC-LOP & 0,9425 \newline ($\sigma$ 0,0358) & 0,5154 \newline ($\sigma$ 0,0618) & 0,0652 \newline ($\sigma$ 0,0520) & 0 & 3,7500 \\ \\
+CC-GA & 0,9410 \newline ($\sigma$ 0,0362) & 0,5278 \newline ($\sigma$ 0,0666) & 0,0470 \newline ($\sigma$ 0,0251) & 0 & 4,5000 \\ \\
+PCC-LOP & \textbf{0,9440} \newline ($\sigma$ 0,0353) & 0,4982 \newline ($\sigma$ 0,0668) & 0,0423 \newline ($\sigma$ 0,0264) & 1 & 5,0000 \\ \\
+S-F & 0,9425 \newline ($\sigma$ 0,0358) & 0,5053 \newline ($\sigma$ 0,0636) & 0,0400 \newline ($\sigma$ 0,0217) & 0 & 5,1250 \\ \\
+(B)SG & 0,9410 \newline ($\sigma$ 0,0362) & 0,5135 \newline ($\sigma$ 0,0732) & 0,0435 \newline ($\sigma$ 0,0238) & 1 & 5,2500 \\ \\
+(B)DBR & 0,9410 \newline ($\sigma$ 0,0362) & 0,5165 \newline ($\sigma$ 0,0620) & 0,0400 \newline ($\sigma$ 0,0256) & 0 & 6,8750 \\ \\
+(B)BR & 0,9425 \newline ($\sigma$ 0,0358) & 0,4951 \newline ($\sigma$ 0,0728) & 0,0382 \newline ($\sigma$ 0,0202) & 0 & 7,0000 \\ \\
 
 \hline \ 
  Diferença & 0,0030 & 0,0337 & 0,0328 &  &  \\ 
