--- a/data/table_f1.tex
+++ b/data/table_f1.tex
@@ -17,6 +17,7 @@ S-F & 0,6299 \newline ($\sigma$ 0,0352) & 0,2823 \newline ($\sigma$ 0,0411) & 0,
 PCC-LOP & \textbf{0,6400} \newline ($\sigma$ 0,0286) & 0,2738 \newline ($\sigma$ 0,0418) & 0,4274 \newline ($\sigma$ 0,0190) & \textbf{0,2861} \newline ($\sigma$ 0,0641) & 0,4271 \newline ($\sigma$ 0,0658) \\ \\
 CC-LOP & 0,6394 \newline ($\sigma$ 0,0335) & 0,2739 \newline ($\sigma$ 0,0432) & 0,4310 \newline ($\sigma$ 0,0162) & 0,2794 \newline ($\sigma$ 0,0655) & 0,4287 \newline ($\sigma$ 0,0660) \\ \\
 (B)BR & 0,6186 \newline ($\sigma$ 0,0359) & 0,2746 \newline ($\sigma$ 0,0449) & 0,4253 \newline ($\sigma$ 0,0183) & 0,2858 \newline ($\sigma$ 0,0719) & 0,4271 \newline ($\sigma$ 0,0652) \\ \\
+CC-GA & 0,6244 \newline ($\sigma$ 0,0403) & 0,2819 \newline ($\sigma$ 0,0478) & 0,4240 \newline ($\sigma$ 0,0173) & 0,2683 \newline ($\sigma$ 0,0731) & 0,4316 \newline ($\sigma$ 0,0620) \\ \\
 
 \hline \ 
  Diferença & 0,0214 & 0,0126 & 0,0155 & 0,0229 & 0,0082 \\ 
@@ -38,16 +39,17 @@ Modelo & \textit{genbase} & \textit{medical} & \textit{enron} & \textbf{Vitória
 \hline \\
 
 CC-F & 0,5158 \newline ($\sigma$ 0,1036) & \textbf{0,2000} \newline ($\sigma$ 0,0229) & 0,0666 \newline ($\sigma$ 0,0230) & 2 & 3,2500 \\ \\
-(B)CC & 0,5169 \newline ($\sigma$ 0,1037) & 0,1934 \newline ($\sigma$ 0,0228) & \textbf{0,0685} \newline ($\sigma$ 0,0201) & 2 & 3,5000 \\ \\
-S-F & \textbf{0,5208} \newline ($\sigma$ 0,1067) & 0,1894 \newline ($\sigma$ 0,0249) & 0,0664 \newline ($\sigma$ 0,0239) & 1 & 3,8750 \\ \\
-(B)DBR & 0,5131 \newline ($\sigma$ 0,1012) & 0,1968 \newline ($\sigma$ 0,0269) & 0,0676 \newline ($\sigma$ 0,0203) & 2 & 4,3750 \\ \\
-(B)SG & 0,5171 \newline ($\sigma$ 0,1038) & 0,1882 \newline ($\sigma$ 0,0228) & 0,0663 \newline ($\sigma$ 0,0200) & 0 & 4,7500 \\ \\
-PCC-LOP & 0,5206 \newline ($\sigma$ 0,1065) & 0,1725 \newline ($\sigma$ 0,0259) & 0,0655 \newline ($\sigma$ 0,0203) & 2 & 4,8750 \\ \\
-CC-LOP & 0,5158 \newline ($\sigma$ 0,1036) & 0,1810 \newline ($\sigma$ 0,0214) & 0,0659 \newline ($\sigma$ 0,0202) & 0 & 5,2500 \\ \\
-(B)BR & \textbf{0,5208} \newline ($\sigma$ 0,1067) & 0,1753 \newline ($\sigma$ 0,0234) & 0,0651 \newline ($\sigma$ 0,0202) & 1 & 5,6250 \\ \\
+(B)CC & 0,5169 \newline ($\sigma$ 0,1037) & 0,1934 \newline ($\sigma$ 0,0228) & \textbf{0,0685} \newline ($\sigma$ 0,0201) & 2 & 3,7500 \\ \\
+S-F & \textbf{0,5208} \newline ($\sigma$ 0,1067) & 0,1894 \newline ($\sigma$ 0,0249) & 0,0664 \newline ($\sigma$ 0,0239) & 1 & 4,1250 \\ \\
+(B)DBR & 0,5131 \newline ($\sigma$ 0,1012) & 0,1968 \newline ($\sigma$ 0,0269) & 0,0676 \newline ($\sigma$ 0,0203) & 2 & 4,7500 \\ \\
+(B)SG & 0,5171 \newline ($\sigma$ 0,1038) & 0,1882 \newline ($\sigma$ 0,0228) & 0,0663 \newline ($\sigma$ 0,0200) & 0 & 5,2500 \\ \\
+PCC-LOP & 0,5206 \newline ($\sigma$ 0,1065) & 0,1725 \newline ($\sigma$ 0,0259) & 0,0655 \newline ($\sigma$ 0,0203) & 2 & 5,2500 \\ \\
+CC-LOP & 0,5158 \newline ($\sigma$ 0,1036) & 0,1810 \newline ($\sigma$ 0,0214) & 0,0659 \newline ($\sigma$ 0,0202) & 0 & 5,6250 \\ \\
+(B)BR & \textbf{0,5208} \newline ($\sigma$ 0,1067) & 0,1753 \newline ($\sigma$ 0,0234) & 0,0651 \newline ($\sigma$ 0,0202) & 1 & 6,1250 \\ \\
+CC-GA & 0,5153 \newline ($\sigma$ 0,1033) & 0,1963 \newline ($\sigma$ 0,0248) & 0,0645 \newline ($\sigma$ 0,0195) & 0 & 6,3750 \\ \\
 
 \hline \ 
- Diferença & 0,0077 & 0,0275 & 0,0034 &  &  \\ 
+ Diferença & 0,0077 & 0,0275 & 0,0040 &  &  \\ 
 \hline \\
 
         \end{tabular}
